# libopencm3

./: CONTRIBUTING.md  LEAME.md  README.md
.github/workflows/: cmake-single-platform.yml
.gitlab/: cmake-cicd.yml
evidence/prompts/: usart.prm
src/: CMakeLists.txt  Leame.md  Makefile  Readme.md  STM32F407VG.ld  content.md  gpio.c  gpio.h  i2c.c  i2c.h  main.c  spi.c  spi.h  spi.md  startup_stm32f407xx.s  syscalls.c  system-stm32f4xx.c  system_stm32f4xx.c  system_stm32f4xx.h  timer.c  timer.h  usart.c  usart.h  usart.md
src/examples/: Readme.md  common_headers.h  spi-example.c  spi_example.c  usart_example.c
src/freertos/: FreeRTOSConfig.h  freertos.h  port.c  portmacro.h  queue.h  task.h
